fix layout issues

--- a/src/app/task/task-home/task-home.component.scss
+++ b/src/app/task/task-home/task-home.component.scss
@@ -1,18 +1,16 @@
 .list-container {
-  flex: 1 1 20em;
+  flex: 1 0 20em;
   overflow-y: scroll; 
   overflow-x: hidden;
 }
 
 .task-lists {
-  width: 100%;
+  max-width: 4800px;
+  min-width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-around;
-  align-content: stretch;
-  align-items: stretch;
   overflow-x: scroll;
 }
 
